kustomizations/media/navidrome/deployment.yaml
# find /mnt/music -type f -name "*.mp3" -exec bpm-tag -f {} \;
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navidrome
  labels:
    app: navidrome
    tier: disposable
spec:
  replicas: 1
  selector:
    matchLabels:
      app: navidrome
      app.kubernetes.io/name: navidrome
  template:
    metadata:
      labels:
        app: navidrome
        app.kubernetes.io/name: navidrome
    spec:
      enableServiceLinks: false
      containers:
      - name: navidrome
        image: deluan/navidrome:latest
        ports:
        - containerPort: 4533
          name: http
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 500m
            memory: 1Gi
        securityContext:
          privileged: false
        volumeMounts:
        - name: cache
          mountPath: /data/cache
        - name: dri
          mountPath: /dev/dri
        - name: data
          mountPath: /data
        - name: music
          mountPath: /music
          readOnly: true
        - name: playlists
          mountPath: /htdocs/docker-entrypoint.sh
          subPath: docker-entrypoint.sh
      nodeSelector:
        kubernetes.io/hostname: caturra
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
        supplementalGroups: [44, 107, 992]
      volumes:
      - name: cache
        emptyDir:
          medium: Memory
          sizeLimit: "1Gi"
      - name: dri
        hostPath:
          path: /dev/dri
          type: Directory
      - name: data
        persistentVolumeClaim:
          claimName: navidrome-pvc
      - name: music
        persistentVolumeClaim:
          claimName: music-pvc
      - name: playlists
        configMap:
          name: shared-playlists
