kustomizations/media/navidrome/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: navidrome
  annotations:
    external-dns.alpha.kubernetes.io/hostname: music.lan
  labels:
    app.kubernetes.io/name: navidrome
    type: LoadBalancer
spec:
  type: LoadBalancer
  loadBalancerIP: 192.168.1.26
  selector:
    app.kubernetes.io/name: navidrome
  ports:
  - name: lb
    port: 80
    targetPort: 4533
  - name: http
    port: 4533
    targetPort: 4533
